--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
 # dependencies
-/node_modules
+**/node_modules/
 /.pnp
 .pnp.js
 
@@ -19,8 +21,8 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-_old
-.npmrc
 .idea/*
 .idea
+
+# .env
 .serverless
