--- a/landing/package.json
+++ b/landing/package.json
@@ -17,8 +17,10 @@
     "@types/node": "20.8.4",
     "@types/react": "18.2.28",
     "@types/react-dom": "18.2.13",
+    "autoprefixer": "^10.4.16",
     "eslint": "8.51.0",
     "eslint-config-next": "13.5.4",
+    "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3",
     "typescript": "5.2.2"
   }
