--- a/chatbot/package.json
+++ b/chatbot/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.19.0",
     "react-use-websocket": "^4.5.0"
   },
   "devDependencies": {
