--- a/chatbot/package.json
+++ b/chatbot/package.json
@@ -13,7 +13,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.19.0",
-    "react-use-websocket": "^4.5.0"
+    "react-use-websocket": "^4.5.0",
+    "vite-plugin-svgr": "^4.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
