--- a/chatbot/tsconfig.json
+++ b/chatbot/tsconfig.json
@@ -16,11 +16,11 @@
 
     /* Linting */
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true,
     "allowSyntheticDefaultImports": true
   },
-  "include": ["src"],
+  "include": ["src", "declarations.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
